--- a/l2_economics/build_cost_projection_model.ipynb
+++ b/l2_economics/build_cost_projection_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,6 @@
        "      <th>avg_l1_gas_price_on_l1_output</th>\n",
        "      <th>avg_l1_gas_price_on_l2</th>\n",
        "      <th>...</th>\n",
-       "      <th>l1_eth_fees_combined</th>\n",
        "      <th>l1_contrib_l2_eth_fees_per_day</th>\n",
        "      <th>l2_contrib_l2_eth_fees_per_day</th>\n",
        "      <th>l2_num_txs_per_day</th>\n",
@@ -132,192 +131,193 @@
        "      <th>l2_eth_fees_per_day</th>\n",
        "      <th>gas_compression_ratio</th>\n",
        "      <th>bytes_compression_ratio</th>\n",
+       "      <th>dt_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>2023-07-27op mainnet</td>\n",
-       "      <td>2023-07-27 00:00:00+00:00</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "      <td>86400.0</td>\n",
-       "      <td>1572</td>\n",
-       "      <td>24</td>\n",
-       "      <td>182445770.0</td>\n",
-       "      <td>33.522666</td>\n",
-       "      <td>28.532408</td>\n",
-       "      <td>34.739742</td>\n",
-       "      <td>...</td>\n",
-       "      <td>98.731773</td>\n",
-       "      <td>132.723754</td>\n",
-       "      <td>33.879241</td>\n",
-       "      <td>900586.0</td>\n",
-       "      <td>5.585550e+09</td>\n",
-       "      <td>515336528.0</td>\n",
-       "      <td>1.926696e+11</td>\n",
-       "      <td>166.602995</td>\n",
-       "      <td>0.526976</td>\n",
-       "      <td>0.354032</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300</th>\n",
-       "      <td>2023-06-18zora network</td>\n",
-       "      <td>2023-06-18 00:00:00+00:00</td>\n",
+       "      <th>162</th>\n",
+       "      <td>2023-07-28zora network</td>\n",
+       "      <td>2023-07-28 00:00:00+00:00</td>\n",
        "      <td>Zora Network</td>\n",
        "      <td>86400.0</td>\n",
        "      <td>145</td>\n",
        "      <td>24</td>\n",
-       "      <td>1861513.0</td>\n",
-       "      <td>15.373002</td>\n",
-       "      <td>14.833691</td>\n",
-       "      <td>297992.139088</td>\n",
+       "      <td>4095210.0</td>\n",
+       "      <td>34.521439</td>\n",
+       "      <td>34.009968</td>\n",
+       "      <td>6.627833e+09</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.534792</td>\n",
-       "      <td>0.000016</td>\n",
-       "      <td>0.000232</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.856000e+03</td>\n",
+       "      <td>1.405807</td>\n",
+       "      <td>3.009096</td>\n",
+       "      <td>15667.0</td>\n",
+       "      <td>6.821384e+07</td>\n",
+       "      <td>20933837.0</td>\n",
+       "      <td>4.970556e+10</td>\n",
+       "      <td>4.414903</td>\n",
+       "      <td>1.002717</td>\n",
+       "      <td>0.195626</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>2023-08-03base</td>\n",
+       "      <td>2023-08-03 00:00:00+00:00</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>86400.0</td>\n",
+       "      <td>1508</td>\n",
+       "      <td>24</td>\n",
+       "      <td>58870456.0</td>\n",
+       "      <td>28.770538</td>\n",
+       "      <td>20.001096</td>\n",
+       "      <td>2.937693e+01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.257562</td>\n",
+       "      <td>44.103869</td>\n",
+       "      <td>458089.0</td>\n",
+       "      <td>1.804413e+09</td>\n",
+       "      <td>104678951.0</td>\n",
+       "      <td>5.233179e+10</td>\n",
+       "      <td>80.361431</td>\n",
+       "      <td>0.537877</td>\n",
+       "      <td>0.562391</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>2023-08-16op mainnet</td>\n",
+       "      <td>2023-08-16 00:00:00+00:00</td>\n",
+       "      <td>OP Mainnet</td>\n",
+       "      <td>86400.0</td>\n",
+       "      <td>1336</td>\n",
+       "      <td>24</td>\n",
+       "      <td>154133869.0</td>\n",
+       "      <td>27.135621</td>\n",
+       "      <td>28.443839</td>\n",
+       "      <td>2.695180e+01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>71.672966</td>\n",
+       "      <td>14.632413</td>\n",
+       "      <td>611121.0</td>\n",
+       "      <td>3.887868e+09</td>\n",
+       "      <td>337053611.0</td>\n",
+       "      <td>1.831551e+11</td>\n",
+       "      <td>86.305379</td>\n",
+       "      <td>0.639615</td>\n",
+       "      <td>0.457298</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>2023-08-08op mainnet</td>\n",
+       "      <td>2023-08-08 00:00:00+00:00</td>\n",
+       "      <td>OP Mainnet</td>\n",
+       "      <td>86400.0</td>\n",
+       "      <td>1594</td>\n",
+       "      <td>24</td>\n",
+       "      <td>187088490.0</td>\n",
+       "      <td>23.122305</td>\n",
+       "      <td>24.298956</td>\n",
+       "      <td>2.310464e+01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.638392</td>\n",
+       "      <td>20.464329</td>\n",
+       "      <td>824269.0</td>\n",
+       "      <td>4.659603e+09</td>\n",
+       "      <td>376881201.0</td>\n",
+       "      <td>1.995162e+11</td>\n",
+       "      <td>94.102721</td>\n",
+       "      <td>0.647632</td>\n",
+       "      <td>0.496412</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>2023-06-18base</td>\n",
+       "      <td>2023-06-18 00:00:00+00:00</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>86400.0</td>\n",
+       "      <td>1432</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2046297.0</td>\n",
+       "      <td>15.291874</td>\n",
+       "      <td>15.056151</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>11232000.0</td>\n",
-       "      <td>4.320035e+10</td>\n",
-       "      <td>0.000248</td>\n",
-       "      <td>17659.747845</td>\n",
-       "      <td>0.165733</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>2023-07-15op mainnet</td>\n",
-       "      <td>2023-07-15 00:00:00+00:00</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "      <td>86400.0</td>\n",
-       "      <td>873</td>\n",
-       "      <td>24</td>\n",
-       "      <td>96042756.0</td>\n",
-       "      <td>14.022248</td>\n",
-       "      <td>13.870608</td>\n",
-       "      <td>13.920836</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.772897</td>\n",
-       "      <td>24.746331</td>\n",
-       "      <td>6.534289</td>\n",
-       "      <td>523797.0</td>\n",
-       "      <td>2.598899e+09</td>\n",
-       "      <td>223809246.0</td>\n",
-       "      <td>1.427600e+11</td>\n",
-       "      <td>31.280620</td>\n",
-       "      <td>0.596667</td>\n",
-       "      <td>0.429128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2023-09-02op mainnet</td>\n",
-       "      <td>2023-09-02 00:00:00+00:00</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "      <td>86400.0</td>\n",
-       "      <td>555</td>\n",
-       "      <td>24</td>\n",
-       "      <td>64110421.0</td>\n",
-       "      <td>12.228743</td>\n",
-       "      <td>11.942873</td>\n",
-       "      <td>12.163717</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12.676324</td>\n",
-       "      <td>13.326511</td>\n",
-       "      <td>7.000612</td>\n",
-       "      <td>298565.0</td>\n",
-       "      <td>1.601747e+09</td>\n",
-       "      <td>140395039.0</td>\n",
-       "      <td>1.060979e+11</td>\n",
-       "      <td>20.327123</td>\n",
-       "      <td>0.645898</td>\n",
-       "      <td>0.456643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>2023-07-06op mainnet</td>\n",
-       "      <td>2023-07-06 00:00:00+00:00</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "      <td>86400.0</td>\n",
-       "      <td>714</td>\n",
-       "      <td>24</td>\n",
-       "      <td>76679552.0</td>\n",
-       "      <td>37.784782</td>\n",
-       "      <td>40.087658</td>\n",
-       "      <td>37.281863</td>\n",
-       "      <td>...</td>\n",
-       "      <td>46.873727</td>\n",
-       "      <td>50.534433</td>\n",
-       "      <td>7.518486</td>\n",
-       "      <td>385527.0</td>\n",
-       "      <td>1.981681e+09</td>\n",
-       "      <td>168414271.0</td>\n",
-       "      <td>1.301172e+11</td>\n",
-       "      <td>58.052919</td>\n",
-       "      <td>0.624890</td>\n",
-       "      <td>0.455303</td>\n",
+       "      <td>2.168383e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.182185</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                    join_id                        dt         chain  \\\n",
-       "164    2023-07-27op mainnet 2023-07-27 00:00:00+00:00    OP Mainnet   \n",
-       "300  2023-06-18zora network 2023-06-18 00:00:00+00:00  Zora Network   \n",
-       "212    2023-07-15op mainnet 2023-07-15 00:00:00+00:00    OP Mainnet   \n",
-       "16     2023-09-02op mainnet 2023-09-02 00:00:00+00:00    OP Mainnet   \n",
-       "244    2023-07-06op mainnet 2023-07-06 00:00:00+00:00    OP Mainnet   \n",
+       "162  2023-07-28zora network 2023-07-28 00:00:00+00:00  Zora Network   \n",
+       "137          2023-08-03base 2023-08-03 00:00:00+00:00          Base   \n",
+       "84     2023-08-16op mainnet 2023-08-16 00:00:00+00:00    OP Mainnet   \n",
+       "116    2023-08-08op mainnet 2023-08-08 00:00:00+00:00    OP Mainnet   \n",
+       "299          2023-06-18base 2023-06-18 00:00:00+00:00          Base   \n",
        "\n",
        "     active_secs_per_day  num_l1_txs_inbox  num_l1_txs_output  \\\n",
-       "164              86400.0              1572                 24   \n",
-       "300              86400.0               145                 24   \n",
-       "212              86400.0               873                 24   \n",
-       "16               86400.0               555                 24   \n",
-       "244              86400.0               714                 24   \n",
+       "162              86400.0               145                 24   \n",
+       "137              86400.0              1508                 24   \n",
+       "84               86400.0              1336                 24   \n",
+       "116              86400.0              1594                 24   \n",
+       "299              86400.0              1432                 24   \n",
        "\n",
        "     calldata_bytes_l1_inbox  avg_l1_gas_price_on_l1_inbox  \\\n",
-       "164              182445770.0                     33.522666   \n",
-       "300                1861513.0                     15.373002   \n",
-       "212               96042756.0                     14.022248   \n",
-       "16                64110421.0                     12.228743   \n",
-       "244               76679552.0                     37.784782   \n",
+       "162                4095210.0                     34.521439   \n",
+       "137               58870456.0                     28.770538   \n",
+       "84               154133869.0                     27.135621   \n",
+       "116              187088490.0                     23.122305   \n",
+       "299                2046297.0                     15.291874   \n",
        "\n",
        "     avg_l1_gas_price_on_l1_output  avg_l1_gas_price_on_l2  ...  \\\n",
-       "164                      28.532408               34.739742  ...   \n",
-       "300                      14.833691           297992.139088  ...   \n",
-       "212                      13.870608               13.920836  ...   \n",
-       "16                       11.942873               12.163717  ...   \n",
-       "244                      40.087658               37.281863  ...   \n",
+       "162                      34.009968            6.627833e+09  ...   \n",
+       "137                      20.001096            2.937693e+01  ...   \n",
+       "84                       28.443839            2.695180e+01  ...   \n",
+       "116                      24.298956            2.310464e+01  ...   \n",
+       "299                      15.056151                     NaN  ...   \n",
        "\n",
-       "     l1_eth_fees_combined  l1_contrib_l2_eth_fees_per_day  \\\n",
-       "164             98.731773                      132.723754   \n",
-       "300              0.534792                        0.000016   \n",
-       "212             21.772897                       24.746331   \n",
-       "16              12.676324                       13.326511   \n",
-       "244             46.873727                       50.534433   \n",
+       "     l1_contrib_l2_eth_fees_per_day  l2_contrib_l2_eth_fees_per_day  \\\n",
+       "162                        1.405807                        3.009096   \n",
+       "137                       36.257562                       44.103869   \n",
+       "84                        71.672966                       14.632413   \n",
+       "116                       73.638392                       20.464329   \n",
+       "299                        0.000000                        0.000000   \n",
        "\n",
-       "     l2_contrib_l2_eth_fees_per_day  l2_num_txs_per_day  l1_gas_used_on_l2  \\\n",
-       "164                       33.879241            900586.0       5.585550e+09   \n",
-       "300                        0.000232                 1.0       1.856000e+03   \n",
-       "212                        6.534289            523797.0       2.598899e+09   \n",
-       "16                         7.000612            298565.0       1.601747e+09   \n",
-       "244                        7.518486            385527.0       1.981681e+09   \n",
+       "     l2_num_txs_per_day  l1_gas_used_on_l2  calldata_bytes_l2_per_day  \\\n",
+       "162             15667.0       6.821384e+07                 20933837.0   \n",
+       "137            458089.0       1.804413e+09                104678951.0   \n",
+       "84             611121.0       3.887868e+09                337053611.0   \n",
+       "116            824269.0       4.659603e+09                376881201.0   \n",
+       "299                 0.0                NaN                 11232000.0   \n",
        "\n",
-       "     calldata_bytes_l2_per_day   l2_gas_used  l2_eth_fees_per_day  \\\n",
-       "164                515336528.0  1.926696e+11           166.602995   \n",
-       "300                 11232000.0  4.320035e+10             0.000248   \n",
-       "212                223809246.0  1.427600e+11            31.280620   \n",
-       "16                 140395039.0  1.060979e+11            20.327123   \n",
-       "244                168414271.0  1.301172e+11            58.052919   \n",
+       "      l2_gas_used  l2_eth_fees_per_day  gas_compression_ratio  \\\n",
+       "162  4.970556e+10             4.414903               1.002717   \n",
+       "137  5.233179e+10            80.361431               0.537877   \n",
+       "84   1.831551e+11            86.305379               0.639615   \n",
+       "116  1.995162e+11            94.102721               0.647632   \n",
+       "299  2.168383e+09             0.000000                    NaN   \n",
        "\n",
-       "     gas_compression_ratio  bytes_compression_ratio  \n",
-       "164               0.526976                 0.354032  \n",
-       "300           17659.747845                 0.165733  \n",
-       "212               0.596667                 0.429128  \n",
-       "16                0.645898                 0.456643  \n",
-       "244               0.624890                 0.455303  \n",
+       "     bytes_compression_ratio  dt_rank  \n",
+       "162                 0.195626       41  \n",
+       "137                 0.562391       35  \n",
+       "84                  0.457298       22  \n",
+       "116                 0.496412       30  \n",
+       "299                 0.182185       81  \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "[5 rows x 26 columns]"
       ]
      },
      "metadata": {},
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
