--- a/l2_economics/build_cost_projection_model.ipynb
+++ b/l2_economics/build_cost_projection_model.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "#Unify datasets\n",
     "dunedf = pd.read_csv('csv_inputs/op_chain_gas_economics_dune_query_2453515_dt2023_09_07.csv') #https://dune.com/queries/2453515 --last 90 days\n",
-    "goldskydf = pd.read_csv('csv_inputs/op_chain_gas_economics_goldsky_zora_pgn_dt2023_09_07.csv') #https://dash.goldsky.com/question/9-op-chains-activity-by-period"
+    "goldskydf = pd.read_csv('csv_inputs/op_chain_gas_economics_goldsky_zora_pgn_dt2023_09_07.csv') #requires auth - https://dash.goldsky.com/question/9-op-chains-activity-by-period"
    ]
   },
   {
