--- a/value_locked_flows/chain_tvl_trends.ipynb
+++ b/value_locked_flows/chain_tvl_trends.ipynb
@@ -40,6 +40,8 @@
     "    #non-dune L2s\n",
     "    ,'ZkSync Era'\n",
     "    ,'Polygon zkEVM'\n",
+    "    ,'Starknet'\n",
+    "    ,'Linea'\n",
     "    #L1\n",
     "    ,'Ethereum'\n",
     "    #Others\n",
@@ -159,7 +161,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10295 rows × 3 columns</p>\n",
+       "<p>10628 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -176,7 +178,7 @@
        "1044 2023-09-10  2.888852e+09         BNB\n",
        "1045 2023-09-11  2.787660e+09         BNB\n",
        "\n",
-       "[10295 rows x 3 columns]"
+       "[10628 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -186,8 +188,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['OP Mainnet' 'Base' 'Arbitrum' 'ZkSync Era' 'Polygon zkEVM' 'Ethereum'\n",
-      " 'Fantom' 'Avalanche' 'Gnosis' 'Celo' 'Polygon' 'BNB']\n"
+      "['OP Mainnet' 'Base' 'Arbitrum' 'ZkSync Era' 'Polygon zkEVM' 'Starknet'\n",
+      " 'Linea' 'Ethereum' 'Fantom' 'Avalanche' 'Gnosis' 'Celo' 'Polygon' 'BNB']\n"
      ]
     }
    ],
