--- a/other_chains_tracking/chain_tvl_trends.ipynb
+++ b/other_chains_tracking/chain_tvl_trends.ipynb
@@ -205,7 +205,7 @@
     "df.loc[df['chain'] == 'Optimism', 'chain'] = 'OP Mainnet'\n",
     "df.loc[df['chain'] == 'BSC', 'chain'] = 'BNB'\n",
     "\n",
-    "display(df)\n",
+    "print(df.sample(5))\n",
     "\n",
     "print(df['chain'].unique())"
    ]
