--- a/other_chains_tracking/chain_tvl_trends.ipynb
+++ b/other_chains_tracking/chain_tvl_trends.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'../helper_functions'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,29 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "chains = [\n",
     "    #L2s\n",
-    "    'Optimism'\n",
-    "    ,'Base'\n",
-    "    ,'Arbitrum'\n",
+    "     ['Optimism', 'L2']\n",
+    "    ,['Base', 'L2']\n",
+    "    ,['Arbitrum', 'L2']\n",
     "    #non-dune L2s\n",
-    "    ,'ZkSync Era'\n",
-    "    ,'Polygon zkEVM'\n",
-    "    ,'Starknet'\n",
-    "    ,'Linea'\n",
+    "    ,['ZkSync Era', 'L2']\n",
+    "    ,['Polygon zkEVM', 'L2']\n",
+    "    ,['Starknet', 'L2']\n",
+    "    ,['Linea', 'L2']\n",
     "    #L1\n",
-    "    ,'Ethereum'\n",
+    "    ,['Ethereum', 'L1']\n",
     "    #Others\n",
-    "    ,'Fantom'\n",
-    "    ,'Avalanche'\n",
-    "    ,'Gnosis' \n",
-    "    ,'Celo' \n",
-    "    ,'Polygon'\n",
-    "    ,'BSC'\n",
+    "    ,['Fantom', 'L1']\n",
+    "    ,['Avalanche', 'L1']\n",
+    "    ,['Gnosis' , 'L1']\n",
+    "    ,['Celo', 'L1']\n",
+    "    ,['Polygon', 'L1']\n",
+    "    ,['BSC', 'L1']\n",
     "]"
    ]
   },
@@ -63,131 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>tvl</th>\n",
-       "      <th>chain</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-07-14</td>\n",
-       "      <td>6.835396e+07</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-07-15</td>\n",
-       "      <td>6.282955e+07</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-07-16</td>\n",
-       "      <td>5.872631e+07</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-07-17</td>\n",
-       "      <td>5.783978e+07</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-07-18</td>\n",
-       "      <td>5.816903e+07</td>\n",
-       "      <td>OP Mainnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1041</th>\n",
-       "      <td>2023-09-07</td>\n",
-       "      <td>2.907576e+09</td>\n",
-       "      <td>BNB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1042</th>\n",
-       "      <td>2023-09-08</td>\n",
-       "      <td>2.937156e+09</td>\n",
-       "      <td>BNB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1043</th>\n",
-       "      <td>2023-09-09</td>\n",
-       "      <td>2.900473e+09</td>\n",
-       "      <td>BNB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1044</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>2.888852e+09</td>\n",
-       "      <td>BNB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1045</th>\n",
-       "      <td>2023-09-11</td>\n",
-       "      <td>2.787660e+09</td>\n",
-       "      <td>BNB</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10628 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           date           tvl       chain\n",
-       "0    2021-07-14  6.835396e+07  OP Mainnet\n",
-       "1    2021-07-15  6.282955e+07  OP Mainnet\n",
-       "2    2021-07-16  5.872631e+07  OP Mainnet\n",
-       "3    2021-07-17  5.783978e+07  OP Mainnet\n",
-       "4    2021-07-18  5.816903e+07  OP Mainnet\n",
-       "...         ...           ...         ...\n",
-       "1041 2023-09-07  2.907576e+09         BNB\n",
-       "1042 2023-09-08  2.937156e+09         BNB\n",
-       "1043 2023-09-09  2.900473e+09         BNB\n",
-       "1044 2023-09-10  2.888852e+09         BNB\n",
-       "1045 2023-09-11  2.787660e+09         BNB\n",
-       "\n",
-       "[10628 rows x 3 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "          date           tvl       chain layer\n",
+      "849 2022-09-18  1.295929e+08        Celo    L1\n",
+      "735 2023-07-19  8.715366e+08  OP Mainnet    L2\n",
+      "579 2022-05-11  3.164334e+09     Polygon    L1\n",
+      "341 2023-04-18  1.219506e+08  ZkSync Era    L2\n",
+      "276 2023-02-12  0.000000e+00  ZkSync Era    L2\n",
       "['OP Mainnet' 'Base' 'Arbitrum' 'ZkSync Era' 'Polygon zkEVM' 'Starknet'\n",
       " 'Linea' 'Ethereum' 'Fantom' 'Avalanche' 'Gnosis' 'Celo' 'Polygon' 'BNB']\n"
      ]
@@ -196,8 +84,9 @@
    "source": [
     "c_agg = []\n",
     "for c in chains:\n",
-    "        d = dfl.get_historical_chain_tvl(c)\n",
-    "        d['chain'] = c\n",
+    "        d = dfl.get_historical_chain_tvl(c[0])\n",
+    "        d['chain'] = c[0]\n",
+    "        d['layer'] = c[1]\n",
     "        c_agg.append(d)\n",
     "\n",
     "df = pd.concat(c_agg)\n",
@@ -212,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
