--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "print(data_df.columns)\n",
     "\n",
-    "display(data_df.sample(5))"
+    "print(data_df.sample(5))"
    ]
   },
   {
