--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# date ranges to build charts for\n",
-    "drange = [7, 30, 90, 180, 365]\n",
+    "drange = [7, 14, 30, 90, 180, 365]\n",
     "# Do we count net flows marked at the lastest token price (1) or the price on each day (0)\n",
     "# By default, we opt to 1, so that price movement isn't accidentally counted as + or - flow remainder\n",
     "mark_at_latest_price = 1 #some errors with missing token prices we need to find solves for first\n",
@@ -34,13 +34,13 @@
     "trailing_num_days = max(drange)\n",
     "# print(trailing_num_days)\n",
     "\n",
-    "start_date = date.today()-timedelta(days=trailing_num_days +1)\n",
+    "start_date = datetime.utcnow().date()-timedelta(days=trailing_num_days +1)\n",
     "print(start_date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76b8d9c9",
    "metadata": {},
    "outputs": [],
