--- a/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,269 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run Query\n",
     "\n",
     "#21-op-chains-activity-by-day\n",
-    "resp = mb.get_mb_query_response(mb_url_base, session_id, 21)\n",
+    "resp = mb.get_mb_query_response(mb_url_base, session_id, 21, retries = 3)\n",
     "# print(resp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['num_raw_txs', 'num_blocks', 'l2_num_txs_per_day', 'l2_gas_used',\n",
-      "       'l1_gas_paid', 'l2_gas_fees_priority_fee', 'dt', 'base_fee_gwei',\n",
-      "       'l2_eth_fees_per_day', 'avg_l1_gas_price_on_l2', 'num_users_per_day',\n",
-      "       'num_user_txs_per_second', 'active_secs_per_day',\n",
-      "       'l2_num_attr_deposit_txs_per_day', 'l1_gas_used_user_txs_l2_per_day',\n",
-      "       'l2_gas_used_per_block', 'chain_type',\n",
-      "       'l2_num_user_deposit_txs_per_day', 'l1_gas_paid_user_txs',\n",
-      "       'avg_l2_gas_price', 'calldata_bytes_user_txs_l2_per_day',\n",
-      "       'l1_contrib_l2_eth_fees_per_day', 'calldata_bytes_l2_per_day',\n",
-      "       'l2_gas_used_per_second', 'equivalent_l1_tx_fee',\n",
-      "       'l2_contrib_l2_eth_fees_per_day', 'l1_gas_used_on_l2',\n",
-      "       'l2_gas_fees_base_fee', 'l2_eth_fees_per_second',\n",
-      "       'l2_eth_fees_per_block', 'chain', 'l2_num_txs_per_day_per_block'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>num_raw_txs</th>\n",
-       "      <th>num_blocks</th>\n",
-       "      <th>l2_num_txs_per_day</th>\n",
-       "      <th>l2_gas_used</th>\n",
-       "      <th>l1_gas_paid</th>\n",
-       "      <th>l2_gas_fees_priority_fee</th>\n",
-       "      <th>dt</th>\n",
-       "      <th>base_fee_gwei</th>\n",
-       "      <th>l2_eth_fees_per_day</th>\n",
-       "      <th>avg_l1_gas_price_on_l2</th>\n",
-       "      <th>...</th>\n",
-       "      <th>calldata_bytes_l2_per_day</th>\n",
-       "      <th>l2_gas_used_per_second</th>\n",
-       "      <th>equivalent_l1_tx_fee</th>\n",
-       "      <th>l2_contrib_l2_eth_fees_per_day</th>\n",
-       "      <th>l1_gas_used_on_l2</th>\n",
-       "      <th>l2_gas_fees_base_fee</th>\n",
-       "      <th>l2_eth_fees_per_second</th>\n",
-       "      <th>l2_eth_fees_per_block</th>\n",
-       "      <th>chain</th>\n",
-       "      <th>l2_num_txs_per_day_per_block</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>53983</td>\n",
-       "      <td>43200</td>\n",
-       "      <td>6007</td>\n",
-       "      <td>3029457883</td>\n",
-       "      <td>1.711406e+07</td>\n",
-       "      <td>1.136110</td>\n",
-       "      <td>2023-06-23</td>\n",
-       "      <td>5.000000e-08</td>\n",
-       "      <td>1.413010</td>\n",
-       "      <td>16.179689</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12789112</td>\n",
-       "      <td>35063.169942</td>\n",
-       "      <td>1.232304e+10</td>\n",
-       "      <td>1.136110</td>\n",
-       "      <td>25020556</td>\n",
-       "      <td>1.514729e-07</td>\n",
-       "      <td>1.635429e-05</td>\n",
-       "      <td>3.270857e-05</td>\n",
-       "      <td>Zora Network</td>\n",
-       "      <td>0.139051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>43211</td>\n",
-       "      <td>43200</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2187862962</td>\n",
-       "      <td>6.452938e+05</td>\n",
-       "      <td>0.000140</td>\n",
-       "      <td>2023-07-19</td>\n",
-       "      <td>5.000000e-08</td>\n",
-       "      <td>0.023442</td>\n",
-       "      <td>36.111138</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11295482</td>\n",
-       "      <td>25322.487986</td>\n",
-       "      <td>5.053172e+08</td>\n",
-       "      <td>0.000140</td>\n",
-       "      <td>943412</td>\n",
-       "      <td>1.093932e-07</td>\n",
-       "      <td>2.713221e-07</td>\n",
-       "      <td>5.426441e-07</td>\n",
-       "      <td>Public Goods Network</td>\n",
-       "      <td>0.000231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>77743</td>\n",
-       "      <td>43200</td>\n",
-       "      <td>29667</td>\n",
-       "      <td>8027024640</td>\n",
-       "      <td>8.669360e+07</td>\n",
-       "      <td>2.699577</td>\n",
-       "      <td>2023-08-10</td>\n",
-       "      <td>5.003079e-08</td>\n",
-       "      <td>4.589221</td>\n",
-       "      <td>21.796802</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21221647</td>\n",
-       "      <td>92905.377778</td>\n",
-       "      <td>1.239086e+11</td>\n",
-       "      <td>2.699578</td>\n",
-       "      <td>126745024</td>\n",
-       "      <td>4.015325e-07</td>\n",
-       "      <td>5.311598e-05</td>\n",
-       "      <td>1.062320e-04</td>\n",
-       "      <td>Zora Network</td>\n",
-       "      <td>0.686736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>125651</td>\n",
-       "      <td>43200</td>\n",
-       "      <td>79039</td>\n",
-       "      <td>11722437253</td>\n",
-       "      <td>1.673699e+08</td>\n",
-       "      <td>3.115360</td>\n",
-       "      <td>2023-08-24</td>\n",
-       "      <td>5.000043e-08</td>\n",
-       "      <td>6.424397</td>\n",
-       "      <td>19.770804</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24319419</td>\n",
-       "      <td>135676.357095</td>\n",
-       "      <td>1.857261e+11</td>\n",
-       "      <td>3.115360</td>\n",
-       "      <td>244692776</td>\n",
-       "      <td>5.861266e-07</td>\n",
-       "      <td>7.435645e-05</td>\n",
-       "      <td>1.487129e-04</td>\n",
-       "      <td>Zora Network</td>\n",
-       "      <td>1.829606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>111309</td>\n",
-       "      <td>43178</td>\n",
-       "      <td>63546</td>\n",
-       "      <td>11700053076</td>\n",
-       "      <td>1.395771e+08</td>\n",
-       "      <td>2.722754</td>\n",
-       "      <td>2023-08-21</td>\n",
-       "      <td>5.000050e-08</td>\n",
-       "      <td>5.711350</td>\n",
-       "      <td>21.411789</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22432721</td>\n",
-       "      <td>135486.278614</td>\n",
-       "      <td>1.969034e+11</td>\n",
-       "      <td>2.722754</td>\n",
-       "      <td>204060120</td>\n",
-       "      <td>5.850087e-07</td>\n",
-       "      <td>6.613727e-05</td>\n",
-       "      <td>1.322745e-04</td>\n",
-       "      <td>Zora Network</td>\n",
-       "      <td>1.471722</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     num_raw_txs  num_blocks  l2_num_txs_per_day  l2_gas_used   l1_gas_paid  \\\n",
-       "143        53983       43200                6007   3029457883  1.711406e+07   \n",
-       "109        43211       43200                  10   2187862962  6.452938e+05   \n",
-       "65         77743       43200               29667   8027024640  8.669360e+07   \n",
-       "36        125651       43200               79039  11722437253  1.673699e+08   \n",
-       "42        111309       43178               63546  11700053076  1.395771e+08   \n",
-       "\n",
-       "     l2_gas_fees_priority_fee          dt  base_fee_gwei  l2_eth_fees_per_day  \\\n",
-       "143                  1.136110  2023-06-23   5.000000e-08             1.413010   \n",
-       "109                  0.000140  2023-07-19   5.000000e-08             0.023442   \n",
-       "65                   2.699577  2023-08-10   5.003079e-08             4.589221   \n",
-       "36                   3.115360  2023-08-24   5.000043e-08             6.424397   \n",
-       "42                   2.722754  2023-08-21   5.000050e-08             5.711350   \n",
-       "\n",
-       "    avg_l1_gas_price_on_l2  ...  calldata_bytes_l2_per_day  \\\n",
-       "143              16.179689  ...                   12789112   \n",
-       "109              36.111138  ...                   11295482   \n",
-       "65               21.796802  ...                   21221647   \n",
-       "36               19.770804  ...                   24319419   \n",
-       "42               21.411789  ...                   22432721   \n",
-       "\n",
-       "     l2_gas_used_per_second  equivalent_l1_tx_fee  \\\n",
-       "143            35063.169942          1.232304e+10   \n",
-       "109            25322.487986          5.053172e+08   \n",
-       "65             92905.377778          1.239086e+11   \n",
-       "36            135676.357095          1.857261e+11   \n",
-       "42            135486.278614          1.969034e+11   \n",
-       "\n",
-       "     l2_contrib_l2_eth_fees_per_day  l1_gas_used_on_l2  l2_gas_fees_base_fee  \\\n",
-       "143                        1.136110           25020556          1.514729e-07   \n",
-       "109                        0.000140             943412          1.093932e-07   \n",
-       "65                         2.699578          126745024          4.015325e-07   \n",
-       "36                         3.115360          244692776          5.861266e-07   \n",
-       "42                         2.722754          204060120          5.850087e-07   \n",
-       "\n",
-       "    l2_eth_fees_per_second  l2_eth_fees_per_block                 chain  \\\n",
-       "143           1.635429e-05           3.270857e-05          Zora Network   \n",
-       "109           2.713221e-07           5.426441e-07  Public Goods Network   \n",
-       "65            5.311598e-05           1.062320e-04          Zora Network   \n",
-       "36            7.435645e-05           1.487129e-04          Zora Network   \n",
-       "42            6.613727e-05           1.322745e-04          Zora Network   \n",
-       "\n",
-       "     l2_num_txs_per_day_per_block  \n",
-       "143                      0.139051  \n",
-       "109                      0.000231  \n",
-       "65                       0.686736  \n",
-       "36                       1.829606  \n",
-       "42                       1.471722  \n",
-       "\n",
-       "[5 rows x 32 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_df = pd.DataFrame(resp)\n",
     "\n",
@@ -334,19 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table at: dune_upload.opchain_activity_by_day_gs\n",
-      "Response status code: 200\n",
-      "Response content: b'{\"success\":true}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Post to Dune API\n",
     "d.write_dune_api_from_pandas(data_df, 'opchain_activity_by_day_gs',\\\n",
@@ -370,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
