--- a/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_mb_query_response() got an unexpected keyword argument 'retries'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Run Query\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[39m#21-op-chains-activity-by-day\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m resp \u001b[39m=\u001b[39m mb\u001b[39m.\u001b[39;49mget_mb_query_response(mb_url_base, session_id, \u001b[39m21\u001b[39;49m, retries \u001b[39m=\u001b[39;49m \u001b[39m3\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: get_mb_query_response() got an unexpected keyword argument 'retries'"
+     ]
+    }
+   ],
    "source": [
     "# Run Query\n",
     "\n",
     "#21-op-chains-activity-by-day\n",
-    "resp = mb.get_mb_query_response(mb_url_base, session_id, 21, retries = 3)\n",
+    "resp = mb.get_mb_query_response(mb_url_base, session_id, 21, num_retries = 3)\n",
     "# print(resp)"
    ]
   },
